Update that damn service names in the sake of app's running on docker!

--- a/eurekaserver/src/main/resources/bootstrap.yml
+++ b/eurekaserver/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 spring:
   application:
-    name: eureka-server
+    name: eurekaserver
   cloud:
     config:
       uri: http://localhost:8071
