--- a/gatewayserver/src/main/resources/bootstrap.yml
+++ b/gatewayserver/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     name: gateway-server
   cloud:
     config:
-      uri: http://localhost:8071
+      uri: http://configserver:8071
     loadbalancer:
       ribbon:
         enabled: false
